updating index2.html

--- a/index2.html
+++ b/index2.html
@@ -2,3 +2,4 @@
 <h2>sample two project</h2>
 <h3>updating file 2</h3>
 <h4>Adding one more line</h4>
+<h5>Modifing the file to check pull request</h5>
